2007-06-26  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add OpenOffice MIME matchlets, fixes #11276.
	Thanks to Matt Keenan <matt.keenan@sun.com>.

2007-06-14  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Match "script" tag in HTML. Fixes #11259.
	Thanks to David Faure <faure@kde.org>.

2007-06-14  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Fix word order in powerpoint matchlet. Fixes
	#435. Thanks to David Faure <faure@kde.org>.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Remove "application/x-netscape-bookmarks"
	definition, make "application/x-netscape-bookmarks" an alias for
	"application/x-mozilla-bookmarks". Also associate extensions "*.html"
	and "*.htm" with Mozilla bookmarks. Fixes #266.

=== shared-mime-info 0.21 ===

2007-04-18  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.21

2007-04-13  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Correct the magic for RTSPtext metalinks
	(See http://bugzilla.gnome.org/show_bug.cgi?id=429383)

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add X11 cursor type (#10043).
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add DirectDraw surface type (#10083).
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add pattern and description for KSysV init
	type (#10040). Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add matchlets for OpenOffice.org types
	(#10100). Thanks to Pino Toscano <toscano.pino@tiscali.it> and Oliver
	Braun <Oliver.Braun@sun.com>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add a bunch of raw camera image types