@@ -1,5 +1,10 @@
 2007-06-26  Christian Neumair  <cneumair@gnome.org>
 
+	* freedesktop.org.xml.in: Add MP2 audio, add more aliases for 3GPP, fixes
+	#10457. Thanks to Matt Keenan <matt.keenan@sun.com>.
+
+2007-06-26  Christian Neumair  <cneumair@gnome.org>
+
 	* freedesktop.org.xml.in: Add OpenOffice MIME matchlets, fixes #11276.
 	Thanks to Matt Keenan <matt.keenan@sun.com>.
 
